<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextMainSalario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/label_salario"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroupAumentaSalario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextMainSalario"
        android:layout_below="@+id/editTextMainSalario" >

        <RadioButton
            android:id="@+id/radioAumentoSalario40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/valor_salario" />

        <RadioButton
            android:id="@+id/radioAumentaSalario45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_salario_45" />

        <RadioButton
            android:id="@+id/radioAumentaSalario50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_salario_50" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonMainBtnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroupAumentaSalario"
        android:layout_alignRight="@+id/editTextMainSalario"
        android:layout_below="@+id/radioGroupAumentaSalario"
        android:text="@string/btn_calcular" />

</RelativeLayout>